src/main/java/com/example/stream/spring/courses/reactive/example/model/error/StudentSuccess.java
package com.example.stream.spring.courses.reactive.example.model.error;

public sealed interface StudentSuccess extends Success permits StudentDeleteOk {
}
